fix(dropdown): dropdown-right class was not aligned

--- a/src/components/dropdown.scss
+++ b/src/components/dropdown.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   position: relative;
 
-  &.dropdown-right {
+  &.dropdown-right .menu {
     left: auto;
     right: 0;
   }
